--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,29 +19,29 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          # terraform_version: 0.13.0:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
-      #- name: Terraform Format
-      #  id: fmt
-      #  run: terraform fmt -check
-
-      - name: Terraform Init
-        id: init
-        run: terraform init
-      
-      - name: Terraform Validate
-        id: validate
-        run: terraform validate -no-color
-
-      - name: Terraform Plan
-        id: plan
-        #if: github.event_name == 'pull_request'
-        run: terraform plan -no-color -input=false
-        continue-on-error: true
+      #- name: Setup Terraform
+      #  uses: hashicorp/setup-terraform@v1
+      #  with:
+      #    # terraform_version: 0.13.0:
+      #    cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+#
+      ##- name: Terraform Format
+      ##  id: fmt
+      ##  run: terraform fmt -check
+#
+      #- name: Terraform Init
+      #  id: init
+      #  run: terraform init
+      #
+      #- name: Terraform Validate
+      #  id: validate
+      #  run: terraform validate -no-color
+#
+      #- name: Terraform Plan
+      #  id: plan
+      #  #if: github.event_name == 'pull_request'
+      #  run: terraform plan -no-color -input=false
+      #  continue-on-error: true
 
       #- uses: actions/github-script@v6
       #  if: github.event_name == 'pull_request'
@@ -70,9 +70,9 @@ jobs:
       #  if: steps.plan.outcome == 'failure'
       #  run: exit 1
 
-      - name: Terraform Apply
-        #if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve -input=false
+      #- name: Terraform Apply
+      #  #if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      #  run: terraform apply -auto-approve -input=false
 
       - name: Azure Login
         uses: azure/login@v1
@@ -81,6 +81,6 @@ jobs:
       - name: 'Run Azure webapp deploy action'
         uses: azure/webapps-deploy@v2
         with: 
-          #app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
-          slot-name: ${{ env.app-AZURE_WEBAPP_SLOT_NAME }}
+          app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
+          slot-name: wappeu2fabsd01-app-release #${{ env.app-AZURE_WEBAPP_SLOT_NAME }}
           package:  ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
